--- a/lib/acp/Makefile
+++ b/lib/acp/Makefile
@@ -5,7 +5,7 @@
 ## Login   <arthur@epitech.net>
 ##
 ## Started on  Mon Nov  7 11:39:45 2016 Arthur Philippe
-## Last update Mon May 15 22:11:59 2017 Arthur Philippe
+## Last update Tue May 16 15:45:53 2017 Arthur Philippe
 ##
 
 CC	=	gcc
@@ -43,7 +43,8 @@ $(NAME): $(OBJS)
 	@echo -e "\nArthur's lib assembled !"
 
 clean:
-	@$(RM) $(OBJS)
+	@echo -en "removed " ; $(RM) $(OBJS) | wc -l | tr -d '\n'
+	@echo -e " objects files."
 
 fclean: clean
 	@$(RM) $(NAME)
