--- a/lib/acp/Makefile
+++ b/lib/acp/Makefile
@@ -5,7 +5,7 @@
 ## Login   <arthur@epitech.net>
 ##
 ## Started on  Mon Nov  7 11:39:45 2016 Arthur Philippe
-## Last update Tue May 23 21:42:44 2017 Arthur Philippe
+## Last update Thu May 25 09:15:33 2017 Arthur Philippe
 ##
 
 CC	=	gcc
@@ -48,7 +48,7 @@ $(NAME): $(OBJS)
 
 clean:
 	@echo -en "cleaned " ; $(RM) $(OBJS) | wc -l | tr -d '\n'
-	@echo -e " of $(NAME)'s source files"
+	@echo -e " of $(NAME)'s object files"
 
 fclean: clean
 	@$(RM) $(NAME)
